--- a/personalities.html
+++ b/personalities.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="static/css/personalities.css"/>
     <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet">
     <style>@import url('https://fonts.cdnfonts.com/css/sf-pro-display');</style>
-    
 </head>
 <body>
     <div class="overlay" id="overlay">
@@ -29,8 +28,20 @@
         <a href="faq.html"><span class="nav-el hli">Контакты</span></a>
     </nav>
     <div class="wrap">
-        <div class="element">aboba</div>
-        <div class="element">huyoba</div>
+        <div class="element brief">
+            <img src="static/img/tourist-photo.jpg" class="disp"/>
+            <div class="bio-text">
+                <p>Геннадий Короткевич - "самый титулованный программист планеты". Он выигрывал буквально все соревнования, в которых участвовал, независимо от того, личные они были или командные. Узнать чуть-чуть больше об этой легенде спортивного программирования вам поможет наша краткая статья о нём.</p>
+            </div>
+            <button type="button" onclick="location.href='hist1.html';">Читать всё</button>
+        </div>
+        <div class="element brief">
+            <img src="static/img/andreeva1.jpg" class="disp"/>
+            <div class="bio-text">
+                <p>Елена Владимировна Андреева внесла значительный вклад в развитие олимпиадного программирования в России. Она является организатором многочисленных сборов и образовательных смен по олимпиадной информатике для школьников. Благодаря ей множество детей заинтересовались программированием. </p>
+            </div>
+            <button type="button" onclick="location.href='hist2.html';">Читать всё</button>
+        </div>
     </div>
     <footer class="footer">
         <span class="hli">© Copyright 2023-24 AESC MSU</span>
