--- a/cp-platforms.html
+++ b/cp-platforms.html
@@ -22,35 +22,37 @@
         </span>
     </header>
     <nav class="nav">
-        <a href="main.html"><span class="nav-el hli">Главная</span></a>
-        <a href="about-us.html"><span class="nav-el hli">О нас</span></a>
-        <a href="faq.html"><span class="nav-el hli">Контакты</span></a>
+        <ul>
+        <li><a href="main.html"><span class="nav-el hli">Главная</span></a></li>
+        <li><a href="about-us.html"><span class="nav-el hli">О нас</span></a></li>
+        <li><a href="faq.html"><span class="nav-el hli">Контакты</span></a></li>
+        </ul>
     </nav>
     <div class="element bio">
         <img src="static/img/codeforces.svg" class="disp"/>
         <div class="bio-text">
-            <h2>Codeforces</h2>
+            <h2><a href="https://codeforces.com">Codeforces</a></h2>
             <p>Цель Codeforces — предложить удобную платформу для создания, проведения и обсуждения соревнований по программированию. Это будет немножко социальная сеть, больше чем новостной портал и больше чем online judge. Вы можете самостоятельно подготовить и провести соревнование. Вы сами решите, будет оно открыто для всего мира или будет локальным соревнованием вашего университета. Ну а если вам это не интересно, то я предлагаю совместно обсуждать новости в мире соревнований -  пишите/читайте блоги, обсуждайте статьи, болейте за родных и близких.</p>
         </div>
     </div>
     <div class="element bio">
         <img src="static/img/codechef.svg" class="disp"/>
         <div class="bio-text">
-            <h2>Codechef</h2>
+            <h2><a href="https://codechef.com">Codechef</a></h2>
             <p>CodeChef был создан как платформа, помогающая программистам добиться успеха в мире алгоритмов, компьютерного программирования и соревнований по программированию. Команда прилагает все усилия, чтобы возродить в вас гика с помощью соревновательного программирования.</p>
         </div>
     </div>
     <div class="element bio">
         <img src="static/img/atcoder.svg" class="disp"/>
         <div class="bio-text">
-            <h2>Atcoder</h2>
+            <h2><a href="https://atcoder.jp">Atcoder</a></h2>
             <p>AtCoder — сайт соревнований по программированию для всех, от новичков до экспертов. На нём проводятся еженедельные онлайн-соревнования по программированию. Каждый контест разделён на дивизионы — рейтинговая группа каждого участника</p>
         </div>
     </div>
     <div class="element bio" class="disp">
         <img src="static/img/leetcode.svg"/>
         <div class="bio-text">
-            <h2>Leetcode</h2>
+            <h2><a href="leetcode.com">Leetcode</a></h2>
             <p>LeetCode — платформа для технических навыков и подготовки к собеседованию, которую студенты, профессиональные программисты и работодатели используют для изучения, практики и оценки навыков кодирования и программирования.</p>
         </div>
     </div>
