--- a/cp.html
+++ b/cp.html
@@ -22,11 +22,12 @@
         </span>
     </header>
     <nav class="nav">
-        <a href="main.html"><span class="nav-el hli">Главная</span></a>
-        <a href="about-us.html"><span class="nav-el hli">О нас</span></a>
-        <a href="faq.html"><span class="nav-el hli">Контакты</span></a>
+        <ul>
+        <li><a href="main.html"><span class="nav-el hli">Главная</span></a></li>
+        <li><a href="about-us.html"><span class="nav-el hli">О нас</span></a></li>
+        <li><a href="faq.html"><span class="nav-el hli">Контакты</span></a></li>
+        </ul>
     </nav>
-
     <div class="element">
         <h2>Чему учит споротивное программирование?</h2>
         <p>Спортивное программирование учит решать задачки, которые очень часто спрашивают на собеседованиях в различных IT-компаниях. Все компании хотят получить людей, кто не просто знает определенный framework или язык, а умеет думать.</p>
