--- a/hist1.html
+++ b/hist1.html
@@ -22,9 +22,11 @@
         </span>
     </header>
     <nav class="nav">
-        <a href="main.html"><span class="nav-el hli">Главная</span></a>
-        <a href="about-us.html"><span class="nav-el hli">О нас</span></a>
-        <a href="faq.html"><span class="nav-el hli">Контакты</span></a>
+        <ul>
+        <li><a href="main.html"><span class="nav-el hli">Главная</span></a></li>
+        <li><a href="about-us.html"><span class="nav-el hli">О нас</span></a></li>
+        <li><a href="faq.html"><span class="nav-el hli">Контакты</span></a></li>
+        </ul>
     </nav>
     <div class="element bio">
         <img src="static/img/tourist-child.jpg" class="disp"/>
@@ -38,6 +40,26 @@
         <div class="bio-text">
             <h2>Школьные достижения</h2>
             <p>Ещё в школе Геннадий Короткевич показывал выдающиеся результаты. В пятом классе он впервые вышел на IOI и получил там серебро. С шестого по одиннадцатый класс Короткевич брал только золото, причём в восьмом, девятом и десятом был абсолютным победителем. Также Геннадий участвовал во ВКОШПе, где его команда один раз взяла серебряную медаль и четыре раза становилась первой.</p>
+            <table>
+                <tr>
+                    <th>Название</th>
+                    <th>2010</th>
+                    <th>2011</th>
+                    <th>2012</th>
+                </tr>
+                <tr>
+                    <td><i>IOI</i></td>
+                    <td>золото</td>
+                    <td>золото</td>
+                    <td>золото</td>
+                </tr>
+                <tr>
+                    <td><i>ВКОШП</i></td>
+                    <td>золото</td>
+                    <td>золото</td>
+                    <td></td>
+                </tr>
+            </table>
         </div>
     </div>
     <div class="element bio">
