--- a/purpose.html
+++ b/purpose.html
@@ -22,9 +22,11 @@
         </span>
     </header>
     <nav class="nav">
-        <a href="main.html"><span class="nav-el hli">Главная</span></a>
-        <a href="about-us.html"><span class="nav-el hli">О нас</span></a>
-        <a href="faq.html"><span class="nav-el hli">Контакты</span></a>
+        <ul>
+        <li><a href="main.html"><span class="nav-el hli">Главная</span></a></li>
+        <li><a href="about-us.html"><span class="nav-el hli">О нас</span></a></li>
+        <li><a href="faq.html"><span class="nav-el hli">Контакты</span></a></li>
+        </ul>
     </nav>
     <div class="element bio">
         <img src="static/img/aesc.jpg" class="disp"/>
@@ -34,11 +36,10 @@
         </div>
     </div>
     <div class="element">
-        <p>Спортивное программирование является ценным ресурсом для тех, кто стремится пройти успешное собеседование в IT-компании. Знание алгоритмов, структур данных и оптимизации кода, которые широко применяются в соревновательном программировании, помогает кандидатам проявить свои навыки и знания во время интервью. Решение сложных задач на соревнованиях тренирует аналитическое мышление и способность быстро находить оптимальные решения, что делает спортивных программистов желанными кандидатами для многих компаний.</p>
+        <p><i>Спортивное программирование</i> является ценным ресурсом для тех, кто стремится пройти успешное <b>собеседование</b> в IT-компании. Знание алгоритмов, структур данных и оптимизации кода, которые широко применяются в соревновательном программировании, помогает кандидатам проявить свои навыки и знания во время интервью. Решение сложных задач на соревнованиях тренирует аналитическое мышление и способность быстро находить оптимальные решения, что делает спортивных программистов желанными кандидатами для многих компаний.</p>
         <p>В целом, спортивное программирование не только помогает в подготовке к карьере в IT-индустрии, но и развивает навыки, которые могут быть полезны в различных областях и повседневной жизни. Оно способствует развитию аналитического мышления, эффективности и способности к творческому мышлению, что делает его ценным инструментом для личного и профессионального роста.</p>
-    </div>
-    <div class="element">    
-        <p>Владение навыками спортивного программирования также открывает двери к решению интересных оптимизационных задач. От простых алгоритмических задач до сложных оптимизаций в больших системах, спортивные программисты могут эффективно применять свои навыки для повышения производительности и эффективности программного обеспечения. Такие навыки востребованы в различных областях, включая финансы, логистику, науку и многие другие.</p>
+        <br/> 
+        <p>Владение навыками спортивного программирования также открывает двери к решению <i>интересных оптимизационных задач</i>. От простых алгоритмических задач до сложных оптимизаций в больших системах, спортивные программисты могут эффективно применять свои навыки для повышения производительности и эффективности программного обеспечения. Такие навыки востребованы в различных областях, включая финансы, логистику, науку и многие другие.</p>
         <p>Благодаря участию в соревнованиях по программированию, люди получают опыт работы с реальными данными и задачами, что делает их более подготовленными к решению сложных проблем в реальном мире. Этот опыт также способствует развитию командной работы, так как многие соревнования проводятся в командном формате, где участники должны эффективно сотрудничать для достижения общей цели.</p>
     </div>
     <footer class="footer">
