--- a/faq.html
+++ b/faq.html
@@ -22,9 +22,11 @@
         </span>
     </header>
     <nav class="nav">
-        <a href="#"><span class="nav-el hli">Главная</span></a>
-        <a href="#"><span class="nav-el hli">О нас</span></a>
-        <a href="#"><span class="nav-el hli">Контакты</span></a>
+        <ul>
+        <li><a href="main.html"><span class="nav-el hli">Главная</span></a></li>
+        <li><a href="about-us.html"><span class="nav-el hli">О нас</span></a></li>
+        <li><a href="faq.html"><span class="nav-el hli">Контакты</span></a></li>
+        </ul>
     </nav>
     <video id="qwqw" autoplay muted width="100%" height="100%" style="margin: 0; padding: 0; float:left;">
         <source src="static/video/rickroll.mp4" type="video/mp4">
