--- a/hist2.html
+++ b/hist2.html
@@ -22,9 +22,11 @@
         </span>
     </header>
     <nav class="nav">
-        <a href="main.html"><span class="nav-el hli">Главная</span></a>
-        <a href="about-us.html"><span class="nav-el hli">О нас</span></a>
-        <a href="faq.html"><span class="nav-el hli">Контакты</span></a>
+        <ul>
+        <li><a href="main.html"><span class="nav-el hli">Главная</span></a></li>
+        <li><a href="about-us.html"><span class="nav-el hli">О нас</span></a></li>
+        <li><a href="faq.html"><span class="nav-el hli">Контакты</span></a></li>
+        </ul>
     </nav>
     <div class="element bio">
         <img src="static/img/andreeva1.jpg" class="disp"/>
