--- a/personalities.html
+++ b/personalities.html
@@ -23,9 +23,11 @@
         </span>
     </header>
     <nav class="nav">
-        <a href="main.html"><span class="nav-el hli">Главная</span></a>
-        <a href="about-us.html"><span class="nav-el hli">О нас</span></a>
-        <a href="faq.html"><span class="nav-el hli">Контакты</span></a>
+        <ul>
+        <li><a href="main.html"><span class="nav-el hli">Главная</span></a></li>
+        <li><a href="about-us.html"><span class="nav-el hli">О нас</span></a></li>
+        <li><a href="faq.html"><span class="nav-el hli">Контакты</span></a></li>
+        </ul>
     </nav>
     <div class="wrap">
         <div class="element brief">
