--- a/cp.html
+++ b/cp.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Спортивное программирование или жизнь</title>
+    <title>Что такое СП</title>
     <link rel="shortcut icon" href="static/img/KIS.svg" type="image/x-icon" />
     <link rel="stylesheet" href="static/css/main.css"/>
     <link rel="stylesheet" href="static/css/hist1.css"/>
